#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-01-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999978 released.

        * Added lines to change /var to proper permissions
          in Makefile.PL.

        * Added file test for Firefox extensions directory.

        * Added null to define $login_id in getpasswd.


2013-01-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999977 released.

        * Fixed Firefox download in Makefile.PL.


2013-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999976 released.

        * New code for permissions in Makefile.PL.


2013-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999975 released.

        * Added temp code for permissions in Makefile.PL.


2013-01-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999974 released.

        * Fix for MozRepl install in Makefile.PL.


2013-01-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999973 released.

        * Modified cache output for acquire_fa_lock() in
          FA_Core.pm.


2013-01-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999972 released.

        * Fix for permissions in Makefile.PL.

        * Fix for output processing in FA_Core.pm.

	* Added cache output for acquire_fa_lock() in
          FA_Core.pm.


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999971 released.

        * Updated fa -V to show custom files in user dir.


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999970 released.
