@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 202e3b3af2f7210435ca781210a065eba89e4a05 ChangeLog
+SHA1 f75cf853b107f82e0bf85f17f15c4bba70e03d27 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 b7f2b6b851f97c5fd3708ef91da27a77327d2e06 META.yml
-SHA1 10d30b235ce37c529cd2e8752295aad3276f3984 MYMETA.json
-SHA1 c0a80536d3fe4c12a2d7abfc8adf50c55354d52d MYMETA.yml
-SHA1 141cd8838c801f13b062eed50ac03d1ece4fe426 Makefile.PL
+SHA1 88ff5342836eb149ec9426d26f12b26bebe619dd META.yml
+SHA1 444c53b97e69cbc813b26abb8f7961edd0c72df3 MYMETA.json
+SHA1 55c59bdb2ef34b8a6a19c38d9c7e666979827f70 MYMETA.yml
+SHA1 4c4a4408b19a5aca34c5d31c130ab7609194fead Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 21697e56e56b675d2036b57c0c8e6a7177db0da9 lib/Net/FullAuto.pm
+SHA1 330e4526dfed3d905c6d224c0f0b8124e7323038 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEBqcwACgkQJM3IZYB6aOrk5gCeIp25+Pk0a2GokFO4cjZXPlsD
-ducAn3HmJJMoqYTFUs8tfGJq91e1sEoX
-=YIwq
+iEYEARECAAYFAlECo5AACgkQJM3IZYB6aOrHRgCfaArDkMvKt5qlwzk8MEpU9whA
+voAAnjbOy16OAMP+PevmOeebZsEspvcH
+=dfkB
 -----END PGP SIGNATURE-----
